--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.2",
+    "nodemon": "^3.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
