--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,12 @@
         "name": "next"
       }
     ],
+    "types": ["node"],
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
