--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.0.8",
     "@prisma/client": "^5.9.1",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "next": "14.0.2",
