--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.11.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.0.2",
+    "next": "^14.0.2",
     "nodemon": "^3.0.1",
     "react": "^18",
     "react-dom": "^18"
