--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.11.0",
-    "prisma": "^5.11.0",
+    "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "dayjs": "^1.11.10",
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.2",
     "nodemon": "^3.0.1",
+    "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18"
   },
