--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie": "^0.6.0",
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
+    "jose": "^5.2.4",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.0.2",
     "nodemon": "^3.0.1",
