--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nodemon": "^3.0.1",
     "prisma": "^5.11.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/cookie": "^0.6.0",
